[gd_scene load_steps=29 format=3 uid="uid://behomoagxuhtf"]

[ext_resource type="Script" path="res://InventoryManagers/withering_menu.gd" id="1_7atc0"]
[ext_resource type="PackedScene" uid="uid://bxy5ij2avjjte" path="res://InventoryManagers/inventory.tscn" id="1_33eoi"]
[ext_resource type="Theme" uid="uid://dbvmo5viem8os" path="res://UI/withering_menu.tres" id="1_bm7xo"]
[ext_resource type="Script" path="res://InventoryManagers/TeaRecipeData.gd" id="3_2axac"]
[ext_resource type="Resource" uid="uid://bwl2w43e45pd8" path="res://Items/ITEMS/WhiteTea.tres" id="3_i0mif"]
[ext_resource type="PackedScene" uid="uid://bbals1kcraiux" path="res://UI/recipe_scroll_container.tscn" id="4_a846g"]
[ext_resource type="Resource" uid="uid://dk0cqkn21p4u0" path="res://Items/ITEMS/WhiteTea(withered).tres" id="4_ytsyv"]
[ext_resource type="Resource" uid="uid://wm0q07dfhg0q" path="res://Items/ITEMS/BlackTea.tres" id="6_nl8ec"]
[ext_resource type="Resource" uid="uid://c8hyhu406wsuj" path="res://Items/ITEMS/BlackTea(withered).tres" id="7_qckek"]
[ext_resource type="Resource" uid="uid://ccdr50kfe1w5l" path="res://Items/ITEMS/OolongTea.tres" id="8_0lpqq"]
[ext_resource type="Resource" uid="uid://bwvxerw8el4eb" path="res://Items/ITEMS/OolongTea(withered).tres" id="9_bskqx"]
[ext_resource type="Resource" uid="uid://cqdtf3phvip60" path="res://Items/ITEMS/GreenTea.tres" id="10_m5400"]
[ext_resource type="Resource" uid="uid://cgdg2pucdawpq" path="res://Items/ITEMS/GreenTea(withered).tres" id="11_bp3ei"]
[ext_resource type="Resource" uid="uid://b0ihsv4vue3vt" path="res://Items/ITEMS/PuerhTea.tres" id="12_be4b6"]
[ext_resource type="Resource" uid="uid://bdnpf0q8mvcj3" path="res://Items/ITEMS/PuerhTea(withered).tres" id="13_5ie6o"]
[ext_resource type="Script" path="res://InventoryManagers/SlotData.gd" id="14_13kb4"]

[sub_resource type="Resource" id="Resource_n514x"]
script = ExtResource("3_2axac")
finished_item_data = ExtResource("3_i0mif")
next_item_data = ExtResource("4_ytsyv")
unlocked = true

[sub_resource type="Resource" id="Resource_124mm"]
script = ExtResource("3_2axac")
finished_item_data = ExtResource("6_nl8ec")
next_item_data = ExtResource("7_qckek")
unlocked = true

[sub_resource type="Resource" id="Resource_hrnra"]
script = ExtResource("3_2axac")
finished_item_data = ExtResource("8_0lpqq")
next_item_data = ExtResource("9_bskqx")
unlocked = true

[sub_resource type="Resource" id="Resource_o6l43"]
script = ExtResource("3_2axac")
finished_item_data = ExtResource("10_m5400")
next_item_data = ExtResource("11_bp3ei")
unlocked = true

[sub_resource type="Resource" id="Resource_77wu4"]
script = ExtResource("3_2axac")
finished_item_data = ExtResource("12_be4b6")
next_item_data = ExtResource("13_5ie6o")
unlocked = true

[sub_resource type="Resource" id="Resource_8hxir"]
script = ExtResource("14_13kb4")
quantity = 1

[sub_resource type="LabelSettings" id="LabelSettings_3aja0"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_0wmcg"]
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_tjjmt"]
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_g025k"]
font_size = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_32tdk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1qm3q"]

[node name="WitheringMenu" type="Control" groups=["inventory_menus"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -16.0
offset_right = -73.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bm7xo")
script = ExtResource("1_7atc0")
UnlockedTeaRecipes = Array[ExtResource("3_2axac")]([SubResource("Resource_n514x"), SubResource("Resource_124mm"), SubResource("Resource_hrnra"), SubResource("Resource_o6l43"), SubResource("Resource_77wu4")])
slot_item = SubResource("Resource_8hxir")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 150.0
offset_bottom = 118.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="HeaderLabel" type="Label" parent="PanelContainer/MarginContainer"]
layout_mode = 2
text = "Withering Rack"
label_settings = SubResource("LabelSettings_3aja0")

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = 13

[node name="CapacityLabel" type="Label" parent="PanelContainer/MarginContainer2"]
layout_mode = 2
text = "Capacity: 5 Fresh Tea Leaves"
label_settings = SubResource("LabelSettings_0wmcg")

[node name="MarginContainer4" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 40

[node name="InputLabel" type="Label" parent="PanelContainer/MarginContainer4"]
layout_mode = 2
text = "Input"
label_settings = SubResource("LabelSettings_tjjmt")

[node name="MarginContainer5" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 7

[node name="OutputLabel" type="Label" parent="PanelContainer/MarginContainer5"]
layout_mode = 2
text = "Output"
label_settings = SubResource("LabelSettings_g025k")

[node name="MarginContainer8" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15

[node name="MarginContainer6" type="MarginContainer" parent="PanelContainer/MarginContainer8"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/margin_left = 2

[node name="InventoryInput" parent="PanelContainer/MarginContainer8/MarginContainer6" instance=ExtResource("1_33eoi")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_32tdk")

[node name="MarginContainer6" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10

[node name="MarginContainer7" type="MarginContainer" parent="PanelContainer/MarginContainer6"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="InventoryOutput" parent="PanelContainer/MarginContainer6/MarginContainer7" instance=ExtResource("1_33eoi")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_1qm3q")

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/margin_bottom = 12

[node name="StartButton" type="Button" parent="PanelContainer/MarginContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
disabled = true
text = "Start Withering"

[node name="MarginContainer7" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 1

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/MarginContainer7"]
custom_minimum_size = Vector2(60, 8)
layout_mode = 2
theme_override_font_sizes/font_size = 5

[node name="RecipeScrollContainer" parent="PanelContainer" instance=ExtResource("4_a846g")]
layout_mode = 2

[connection signal="pressed" from="PanelContainer/MarginContainer3/StartButton" to="." method="_on_start_button_pressed"]
